--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CareCompanion.com</title>
-    <link rel="stylesheet" , href="CompStyles.css">
+    <link rel="stylesheet" , href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=MedievalSharp&family=Quando&display=swap"
