--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,19 @@
 
 <head>
     <title>CareCompanion.com</title>
+    <link rel="icon" href="/Symbol.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta name="keywords" content="Companion, Carepanion, jobs">
+    <meta name="author" content="CareCompanion">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="CareCompanion">
+    <meta property="og:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta property="og:image" content="/jovian_meta.png">
+    <meta name="twitter:title" content="CareCompanion Careers">
+    <meta name="twitter:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta name="twitter:image" content="/jovian_meta.png">
     <link rel="stylesheet" , href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
