--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="CareCompanion">
     <meta property="og:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
-    <meta property="og:image" content="/jovian_meta.png">
+    <meta property="og:image" content="/ElderlyCare.jpg">
     <meta name="twitter:title" content="CareCompanion Careers">
     <meta name="twitter:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
-    <meta name="twitter:image" content="/jovian_meta.png">
+    <meta name="twitter:image" content="/ElderlyCare.jpg">
     <link rel="stylesheet" , href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
