--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,18 @@
     <link rel="icon" href="/Symbol.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta name="description"
+        content="Learn about possible companions you can get in touch with to help with your daily routines">
     <meta name="keywords" content="Companion, Carepanion, jobs">
     <meta name="author" content="CareCompanion">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="CareCompanion">
-    <meta property="og:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta property="og:description"
+        content="Learn about possible companions you can get in touch with to help with your daily routines">
     <meta property="og:image" content="/ElderlyCare.jpg">
     <meta name="twitter:title" content="CareCompanion Careers">
-    <meta name="twitter:description" content="Learn about possible companions you can get in touch with to help with your daily routines">
+    <meta name="twitter:description"
+        content="Learn about possible companions you can get in touch with to help with your daily routines">
     <meta name="twitter:image" content="/ElderlyCare.jpg">
     <link rel="stylesheet" , href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,28 +38,29 @@
         Care(com)panion
     </h1>
     <img id="banner" src="Garden.jpg" alt="Banner" height="400">
-    
+
     <div class="imageoverlap">
         <span>
             <a class="button" href="https://jovian.com/learn" target="_blank">Needs</a>
             <a class="button" href="https://jovian.com/learn" target="_blank">Companions</a>
-            <a class="button1 button" href="https://jovian.com/learn" target="_blank">Home page</a>
+            <a class="button" href="https://jovian.com/learn" target="_blank">Home page</a>
         </span>
     </div>
 
     <div class="about">
         <div class="bigbox">
             <h2>What we offer</h2>
-            <ul id="list">
-                <li><img src="Check.png" class="check-mark" alt="check">help with medication</li>
-                <li><img src="Check.png" class="check-mark" alt="check">help with cooking</li>
-                <li><img src="Check.png" class="check-mark" alt="check">help with de-cluttering</li>
-                <li><img src="Check.png" class="check-mark" alt="check">help with shopping</li>
-                <li><img src="Check.png" class="check-mark" alt="check">help with travel/driving</li>
-            </ul>
-        </div>
-        <img src="tree.png" alt="old people" height="300" style="margin: 0 auto;">
+                <ul id="list">
+                    <li><img src="Check.png" class="check-mark" alt="check">help with medication</li>
+                    <li><img src="Check.png" class="check-mark" alt="check">help with cooking</li>
+                    <li><img src="Check.png" class="check-mark" alt="check">help with de-cluttering</li>
+                    <li><img src="Check.png" class="check-mark" alt="check">help with shopping</li>
+                    <li><img src="Check.png" class="check-mark" alt="check">help with travel/driving</li>
+                </ul>
+            </div>
+            <img src="tree.png" alt="old people" height="300">
     </div>
+
     <div class="biggerbox">
         <h4>More about us</h4>
         <div class="about">
