media screen optimization

--- a/src/index.html
+++ b/src/index.html
@@ -27,24 +27,19 @@
 </head>
 
 <body>
+    <div id="header">
+        <div id="sim"><img src="Symbol.png" id="symbol" alt="Banner"></div>
+        <h1>Care(com)panion</h1>
+        <a class="box1" style="text-decoration: none" href="https://jovian.com/learn" target="_blank">sign in</a>
+        <a class="box1" style="text-decoration: none" href="https://jovian.com/learn" target="_blank">log in</a>
+    </div>
 
-    <a class="box1" style="text-decoration: none" href="https://jovian.com/learn" target="_blank">sighn in</a>
-    <a class="box1" style="text-decoration: none" href="https://jovian.com/learn" target="_blank">log in</a>
-
-    <h1 id="header">
-        <span id="symbol">
-            <img id="symbol" src="Symbol.png" alt="Banner">
-        </span>
-        Care(com)panion
-    </h1>
     <img id="banner" src="Garden.jpg" alt="Banner" height="400">
 
     <div class="imageoverlap">
-        <span>
-            <a class="button" href="https://jovian.com/learn" target="_blank">Needs</a>
-            <a class="button" href="https://jovian.com/learn" target="_blank">Companions</a>
-            <a class="button" href="https://jovian.com/learn" target="_blank">Home page</a>
-        </span>
+        <a class="button" href="https://jovian.com/learn" target="_blank">Needs</a>
+        <a class="button" href="https://jovian.com/learn" target="_blank">Companions</a>
+        <a class="button" href="https://jovian.com/learn" target="_blank">Home page</a>
     </div>
 
     <div class="about">
@@ -58,7 +53,7 @@
                 <li><img src="Check.png" class="check-mark" alt="check">help with travel/driving</li>
             </ul>
         </div>
-        <img src="tree.png" alt="old people" height="300">
+        <img class="images" src="tree.png" alt="old people" height="300">
     </div>
 
     <div class="biggerbox">
